asociacion de bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-
-<h1>a maria le pica el culo</h1>
+<h1 class="titulo">Consultorio Odontologico</h1>
+<button class="btn btn-primary">"ailec"</button>
