--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
 <h1 class="titulo">Consultorio Odontologico</h1>
-<button class="btn btn-primary">"ailec"</button>
+<button class="btn btn-primary">"ailec"</button>\
+
+
+<router-outlet></router-outlet>
