--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1 class="titulo">Consultorio Odontologico</h1>
-<button class="btn btn-primary" [routerLink]="['/user']">users<button>
+<app-header></app-header>
+<router-outlet>
 
-    <router-outlet></router-outlet>
+</router-outlet>
