--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,25 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary gb-header">
-    <div class="container-fluid" >
-      <a class="navbar-brand" href="#">Logo que hace falta</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav" fxLayout.lt-sm="column" fxLayout.lt-md="column"   fxLayout="row" >
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/']">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/user']">Pacientes</a>
-          </li>
-          <li class="nav-item">
-            <!-- yo se que admin no existe pa que luego la pongan -->
-            <a class="nav-link" [routerLink]="['/admin']">Admins</a>
-          </li>
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Logo que hace falta</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+      aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarColor01">
+      <ul class="navbar-nav" fxLayout.lt-sm="column" fxLayout.lt-md="column" fxLayout="row">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/']">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/user']">Pacientes</a>
+        </li>
 
 
-        </ul>
-    
-      </div>
+
+      </ul>
+
     </div>
-  </nav>
+  </div>
+</nav>
