add route en el admin

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -8,8 +8,8 @@
             <th scope="col">Correo</th>
         </tr>
         </thead>
-        <tbody>
-        <tr *ngFor="let admin of admins">
+        <tbody>sud
+        <tr *ngIf="admins">
             <th scope="row">Default</th>
             <td></td>
         </tr>
