--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -14,7 +14,7 @@
           </li>
           <li class="nav-item">
             <!-- yo se que admin no existe pa que luego la pongan -->
-            <a class="nav-link" [routerLink]="['/admin']">Admins</a>
+            <a class="nav-link" [routerLink]="['/admins']">Admins</a>
           </li>
 
 
