--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,3 +1,15 @@
 .paginator{
   margin-top: 50px;
 }
+.reload{
+  animation: rotate infinite 1.5s;
+
+}
+@keyframes rotate{
+  from{
+    transform: rotate(0deg)
+  }
+  to{
+    transform: rotate(360deg)
+  }
+}
