--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -4,3 +4,15 @@
 .container{
   margin-top: 40px;
 }
+.reload{
+  animation: rotate infinite 1.5s;
+}
+
+@keyframes rotate {
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
+}
