--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="container-fluid">
+    <div class="container loading" *ngIf="!users">
     <h3 class="h3 text-center my-3">Cargando</h3>
     <div class="text-center reload" >
 
@@ -11,7 +12,10 @@
               d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z" />
       </svg>
     </div>
-    <table class="table table-hover">
+    </div>
+
+
+    <table *ngIf="users" class="table table-hover">
       <thead>
         <tr>
           <th scope="col">ID</th>
@@ -27,13 +31,16 @@
           <td>{{user.name}}</td>
           <td>{{user.level}}</td>
           <td>{{user.img}}</td>
+          <td>
+            <a class="nav-link" [routerLink]="['/detail-user',user.name]">detalle user</a>
+            </td>
 
         </tr>
 
 
       </tbody>
     </table>
-    <div fxLayoutAlign="center center" class="paginator">
+    <div *ngIf="users" fxLayoutAlign="center center" class="paginator">
       <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
         <div class="btn-group me-2" role="group" aria-label="First group">
           <button type="button" class="btn btn-secondary">1</button>
