creacion de buscador y cambiar el paginador, anadimos imagen de perfil y datos individuales

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -14,6 +14,13 @@
     </div>
     </div>
 
+    <div class="container-search">
+      <form *ngIf="users" class="d-flex">
+        <input class="form-control me-sm-2" type="text" placeholder="Search">
+        <button class="btn btn-primary disabled my-2 my-sm-0" type="submit">Search</button>
+      </form>
+
+    </div>
 
     <table *ngIf="users" class="table table-hover">
       <thead>
@@ -32,7 +39,7 @@
           <td>{{user.level}}</td>
           <td>{{user.img}}</td>
           <td>
-            <a class="nav-link" [routerLink]="['/detail-user',user.name]">detalle user</a>
+            <a class="nav-link" [routerLink]="['/detail-user',user.name]" class="text-secondary">detail user</a>
             </td>
 
         </tr>
@@ -41,24 +48,30 @@
       </tbody>
     </table>
     <div *ngIf="users" fxLayoutAlign="center center" class="paginator">
-      <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-        <div class="btn-group me-2" role="group" aria-label="First group">
-          <button type="button" class="btn btn-secondary">1</button>
-          <button type="button" class="btn btn-secondary">2</button>
-          <button type="button" class="btn btn-secondary">3</button>
-          <button type="button" class="btn btn-secondary">4</button>
-        </div>
-        <div class="btn-group me-2" role="group" aria-label="Second group">
-          <button type="button" class="btn btn-secondary">5</button>
-          <button type="button" class="btn btn-secondary">6</button>
-          <button type="button" class="btn btn-secondary">7</button>
-        </div>
-        <div class="btn-group" role="group" aria-label="Third group">
-          <button type="button" class="btn btn-secondary">8</button>
-        </div>
-      </div>
+      <ul class="pagination">
+        <li class="page-item disabled">
+          <a class="page-link" href="#">&laquo;</a>
+        </li>
+        <li class="page-item active">
+          <a class="page-link" href="#">1</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">2</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">4</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">5</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="#">&raquo;</a>
+        </li>
+      </ul>
     </div>
-
 
   </div>
 </div>
