--- a/src/app/detail-user/detail-user.component.html
+++ b/src/app/detail-user/detail-user.component.html
@@ -17,13 +17,11 @@
         <div *ngIf="user" class="card mb-3">
             <h3 class="card-header" *ngIf="user">{{user.name}}</h3>
             <div class="card-body">
-                <h5 class="card-title">Special title treatment</h5>
-                <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+                <h5 class="card-title">Level</h5>
+                <h6 class="card-subtitle text-muted">{{user.level}}</h6>
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                <rect width="100%" height="100%" fill="#868e96"></rect>
-                <text x="50%" y="50%" fill="#dee2e6" dy=".3em">{{user.img}}</text>
-            </svg>
+                <img height="60%" width="25%" src="{{user.img}}" alt="">
+
             <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
