cambio de color al boton buscar

--- a/src/app/detail-user/detail-user.component.html
+++ b/src/app/detail-user/detail-user.component.html
@@ -15,7 +15,7 @@
         </div>
 
         <div *ngIf="user" class="card mb-3">
-            <h3 class="card-header" *ngIf="user">{{user.name}}</h3>
+            <h3 class="card-header">{{user.name}}</h3>
             <div class="card-body">
                 <h5 class="card-title">Level</h5>
                 <h6 class="card-subtitle text-muted">{{user.level}}</h6>
