--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -17,7 +17,7 @@
     <div class="container-search">
       <form *ngIf="admins" class="d-flex">
         <input class="form-control me-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-primary disabled my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-success disabled my-2 my-sm-0" type="submit">Search</button>
       </form>
 
     </div>
