--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -16,6 +16,10 @@
             <!-- yo se que admin no existe pa que luego la pongan -->
             <a class="nav-link" [routerLink]="['/admins']">Admins</a>
           </li>
+          <li class="nav-item">
+            <!-- yo se que admin no existe pa que luego la pongan -->
+            <a class="nav-link" [routerLink]="['/register']">Register</a>
+          </li>
 
 
 
