centrado de registro

--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,4 +1,12 @@
 .txt{
     width: 400px;
-    justify-content: center;
+    
+    
+}
+
+.container{
+    
+    display: flex;
+    justify-content: space-around;
+    
 }
