--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,19 @@
-<p>register works!</p>
+<div class="container">
+    
+        
+            <form action="" class="form-client" >
+                <div class="form-group" class="txt">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="text" name="nombre" class="form-control">
+                </div>
+                <div class="form-group" class="txt">
+                    <label for="apellido" class="form-label">Apellido</label>
+                    <input type="text" name="apellido" class="form-control">
+                </div>
+                <div class="form-group" class="txt">
+                    <label for="ci" class="form-label">Cedula</label>
+                    <input type="text" name="ci" class="form-control">
+                </div>
+            </form>
+    
+</div>
