--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,5 +1,5 @@
 .txt{
-    width: 400px;
+    width: 250px;
     
     
 }
@@ -7,6 +7,7 @@
 .container{
     
     display: flex;
-    justify-content: space-around;
+    margin-top: 90px;
+    
     
 }
