--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,19 +1,37 @@
 <div class="container">
-    
-        
-            <form action="" class="form-client" >
-                <div class="form-group" class="txt">
-                    <label for="nombre" class="form-label">Nombre</label>
-                    <input type="text" name="nombre" class="form-control">
-                </div>
-                <div class="form-group" class="txt">
-                    <label for="apellido" class="form-label">Apellido</label>
-                    <input type="text" name="apellido" class="form-control">
-                </div>
-                <div class="form-group" class="txt">
-                    <label for="ci" class="form-label">Cedula</label>
-                    <input type="text" name="ci" class="form-control">
-                </div>
-            </form>
+    <div class="row">
+        <h1>Usuario</h1>
+        <form action="" class="form-client" >
+            <div class="form-group txt">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" name="nombre" class="form-control">
+            </div>
+               
+            <div class="form-group my-3 txt">
+                <label for="apellido" class="form-label">Apellido</label>
+                <input type="text" name="apellido" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="ci" class="form-label">Cedula</label>
+                <input type="text" name="ci" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="email" class="form-label">Email</label>
+                <input type="text" name="email" class="form-control">
+            </div>
+            <div class="form-group txt">
+                <label for="ubicacion" class="form-label my-3">Ubicacion</label>
+                <select name="ubicacion" id="">
+                    <option value="San Cristobal">San Cristobal</option>
+                    <option value="San Cristobal">palmira</option>
+                    <option value="San Cristobal">caneyes</option>
+                    <option value="San Cristobal">barrio obrero</option>
+                </select>
+                
+            </div>
+
+        </form>
+    </div>
+
     
 </div>
