--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -4,10 +4,24 @@
     
 }
 
+.container-usuario{
+    padding: 1.5rem;
+}
+
+.txt_titulo{
+    margin-left: 50px;
+    font-size: 40px;
+    color: rgb(88, 81, 81);
+}
+
 .container{
     
     display: flex;
-    margin-top: 90px;
+    margin-top: 50px;
+    margin-bottom: 50px;
     
-    
+}
+.container_papa{
+    display: flex;
+    justify-content: center;
 }
