--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
-<div class="container">
-    <div class="row">
-        <h1>Usuario</h1>
+<div class="container col md-4 ">
+    <div class="row card  container-usuario">
+        <h1 class="txt_titulo">Usuario</h1>
         <form action="" class="form-client" >
             <div class="form-group txt">
                 <label for="nombre" class="form-label">Nombre</label>
@@ -19,7 +19,11 @@
                 <label for="email" class="form-label">Email</label>
                 <input type="text" name="email" class="form-control">
             </div>
-            <div class="form-group txt">
+            <div class="form-group my-3 txt">
+                <label for="telefono" class="form-label">Telefono</label>
+                <input type="text" name="telefono" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
                 <label for="ubicacion" class="form-label my-3">Ubicacion</label>
                 <select name="ubicacion" id="">
                     <option value="San Cristobal">San Cristobal</option>
@@ -27,11 +31,14 @@
                     <option value="San Cristobal">caneyes</option>
                     <option value="San Cristobal">barrio obrero</option>
                 </select>
-                
             </div>
-
+            <div class="form-group txt">
+                <label for="fecha_nacimiento" class="form-label my-3">Fecha de Naciemiento</label>
+                <input type="date" name="fecha_nacimiento">
+            </div>
         </form>
     </div>
-
-    
+</div>
+<div class="container_papa">
+    <div class="row card "></div>
 </div>
