--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,84 @@
-<div class="container col md-4 ">
-    <div class="row card  container-usuario">
+<div class="container">
+    <div class="row container_1">
+    <div class="col card  container-usuario">
+        <h1 class="txt_titulo">Usuario</h1>
+        <form action="" class="form-client" >
+            <div class="form-group txt">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" name="nombre" class="form-control">
+            </div>
+               
+            <div class="form-group my-3 txt">
+                <label for="apellido" class="form-label">Apellido</label>
+                <input type="text" name="apellido" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="ci" class="form-label">Cedula</label>
+                <input type="text" name="ci" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="email" class="form-label">Email</label>
+                <input type="text" name="email" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="telefono" class="form-label">Telefono</label>
+                <input type="text" name="telefono" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="ubicacion" class="form-label my-3">Ubicacion</label>
+                <select name="ubicacion" id="">
+                    <option value="San Cristobal">San Cristobal</option>
+                    <option value="San Cristobal">palmira</option>
+                    <option value="San Cristobal">caneyes</option>
+                    <option value="San Cristobal">barrio obrero</option>
+                </select>
+            </div>
+            <div class="form-group txt">
+                <label for="fecha_nacimiento" class="form-label my-3">Fecha de Naciemiento</label>
+                <input type="date" name="fecha_nacimiento">
+            </div>
+        </form>
+    </div>
+    <div class="col card container_papa">
+        <h1 class="txt_titulo">Usuario</h1>
+        <form action="" class="form-client" >
+            <div class="form-group txt">
+                <label for="nombre" class="form-label">Nombre</label>
+                <input type="text" name="nombre" class="form-control">
+            </div>
+               
+            <div class="form-group my-3 txt">
+                <label for="apellido" class="form-label">Apellido</label>
+                <input type="text" name="apellido" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="ci" class="form-label">Cedula</label>
+                <input type="text" name="ci" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="email" class="form-label">Email</label>
+                <input type="text" name="email" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="telefono" class="form-label">Telefono</label>
+                <input type="text" name="telefono" class="form-control">
+            </div>
+            <div class="form-group my-3 txt">
+                <label for="ubicacion" class="form-label my-3">Ubicacion</label>
+                <select name="ubicacion" id="">
+                    <option value="San Cristobal">San Cristobal</option>
+                    <option value="San Cristobal">palmira</option>
+                    <option value="San Cristobal">caneyes</option>
+                    <option value="San Cristobal">barrio obrero</option>
+                </select>
+            </div>
+            <div class="form-group txt">
+                <label for="fecha_nacimiento" class="form-label my-3">Fecha de Naciemiento</label>
+                <input type="date" name="fecha_nacimiento">
+            </div>
+        </form>
+    </div>
+    <div class="col card  container-mama">
         <h1 class="txt_titulo">Usuario</h1>
         <form action="" class="form-client" >
             <div class="form-group txt">
@@ -39,6 +118,8 @@
         </form>
     </div>
 </div>
-<div class="container_papa">
-    <div class="row card "></div>
-</div>
+
+
+
+
+
