--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,27 +1,11 @@
-.txt{
-    width: 250px;
-    
-    
-}
-
-.container-usuario{
-    padding: 1.5rem;
+.container_1{
+    display: flex;
+    justify-content: center;
+    margin: 50px;
 }
 
 .txt_titulo{
-    margin-left: 50px;
-    font-size: 40px;
-    color: rgb(88, 81, 81);
+    padding-left: 100px;
 }
 
-.container{
-    
-    display: flex;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    
-}
-.container_papa{
-    display: flex;
-    justify-content: center;
-}
+
