ajustes en card y container fluid space around

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container-fluid">
+    
     <div class="row container_1">
-    <div class="col card  container-usuario">
+    <div class="col-md-4 card   box">
         <h1 class="txt_titulo">Usuario</h1>
         <form action="" class="form-client" >
             <div class="form-group txt">
@@ -39,7 +40,7 @@
             </div>
         </form>
     </div>
-    <div class="col card container_papa">
+    <div class="col-md-4 card  box">
         <h1 class="txt_titulo">Usuario</h1>
         <form action="" class="form-client" >
             <div class="form-group txt">
@@ -78,7 +79,7 @@
             </div>
         </form>
     </div>
-    <div class="col card  container-mama">
+    <div class="col-md-4 card  box">
         <h1 class="txt_titulo">Usuario</h1>
         <form action="" class="form-client" >
             <div class="form-group txt">
@@ -116,6 +117,7 @@
                 <input type="date" name="fecha_nacimiento">
             </div>
         </form>
+    </div>
     </div>
 </div>
 
