--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,11 +1,21 @@
 .container_1{
     display: flex;
-    justify-content: center;
-    margin: 50px;
+    justify-content: space-around;
+
 }
 
 .txt_titulo{
     padding-left: 100px;
 }
+.box{
+    margin-top:100px;
 
+ 
+}
+.card{
+    width: 30%;
+    box-shadow: 4px 8px 18px #00000066;
+    border-radius: 15px;
+
+}
 
