--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -4,7 +4,10 @@
     margin-right:10%;
 }
 .navbar-nav{
-   margin-left :30%;
+   margin-left :50%;
 }
-
+.img{
+    width: 90px;
+    padding-bottom: 5px;
+}
 
