--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,16 +1,20 @@
+
 .container_1{
     display: flex;
-    justify-content: space-around;
-
+    justify-content: space-evenly;
+    
 }
 
 .txt_titulo{
-    padding-left: 100px;
+    text-align: center;
+}
+.txt_titulo1{
+    text-align: center;
+    margin-top:20px;
 }
 .box{
-    margin-top:100px;
-
- 
+    margin-top:50px;
+    margin-bottom: 50px;
 }
 .card{
     width: 30%;
