--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -7,7 +7,10 @@
    margin-left :50%;
 }
 .img{
-    width: 90px;
-    padding-bottom: 5px;
+    width: 100px;
+    margin-bottom:20px;
+}
+.container-fluid{
+    height: 85px;
 }
 
