--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -17,7 +17,7 @@
     <div class="container-search">
       <form *ngIf="admins" class="d-flex">
         <input class="form-control me-sm-2" type="text" placeholder="Search">
-        <button class="btn btn-success disabled my-2 my-sm-0" type="submit">Search</button>
+        <button class="btn btn-success  my-2 my-sm-0" type="submit" (click)="handlerSearch($event)">Search</button>
       </form>
 
     </div>
@@ -27,17 +27,20 @@
       <tr>
         <th scope="col">ID</th>
         <th scope="col">Name</th>
-        <th scope="col">Level</th>
         <th scope="col">Email</th>
 
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let user of admins">
+      <tr *ngFor="let admin of admins">
         <th scope="row" >Default</th>
-        <td>{{user.name}}</td>
-        <td>{{user.level}}</td>
-        <td>{{user.img}}</td>
+        <td>{{admin.id}}</td>
+        <td>{{admin.name}}</td>
+        <td>{{admin.email}}</td>
+
+        <td>
+          <a class="nav-link text-secondary" [routerLink]="['/detail-admin',admin.id]" >detail admin</a>
+        </td>
 
       </tr>
 
