--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,4 @@
+
 <div class="container-fluid">
     
     <div class="row container_1">
@@ -6,28 +7,28 @@
         <form action="" class="form-client" >
             <div class="form-group txt">
                 <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" name="nombre" class="form-control">
+                <input type="text" name="nombre" class="form-control" placeholder="Ingrese los nombres del paciente">
             </div>
                
             <div class="form-group my-3 txt">
                 <label for="apellido" class="form-label">Apellido</label>
-                <input type="text" name="apellido" class="form-control">
+                <input type="text" name="apellido" class="form-control" placeholder="Ingrese los apellidos del paciente">
             </div>
             <div class="form-group my-3 txt">
                 <label for="ci" class="form-label">Cedula</label>
-                <input type="text" name="ci" class="form-control">
+                <input type="text" name="ci" class="form-control" placeholder="Ingrese la cedula del paciente">
             </div>
             <div class="form-group my-3 txt">
                 <label for="email" class="form-label">Email</label>
-                <input type="text" name="email" class="form-control">
+                <input type="text" name="email" class="form-control" placeholder="Ingrese el email del paciente">
             </div>
             <div class="form-group my-3 txt">
                 <label for="telefono" class="form-label">Telefono</label>
-                <input type="text" name="telefono" class="form-control">
+                <input type="text" name="telefono" class="form-control" placeholder="Ingrese el telefono del paciente">
             </div>          
             <div class="form-group my-3 txt">
                 <label for="celular" class="form-label">Celular</label>
-                <input type="text" name="celular" class="form-control">
+                <input type="text" name="celular" class="form-control" placeholder="Ingrese el celular del paciente">
             </div><br>
             <div id="date-picker-example" class="md-form md-outline input-with-post-icon datepicker" inline="true">
                 <label for="example">Naciemiento</label>
@@ -65,12 +66,12 @@
                 <h3 class="txt_titulo mr-5">Referido</h3>
             </div>
             <div class="form-group my-3 txt">
-                <label for="Odontologo" class="form-label">Odontologo</label>
-                <input type="text" name="Odontologo" class="form-control">
+                <label for="Odontologo" class="form-label">Nombre del Referido</label>
+                <input type="text" name="Odontologo" class="form-control" placeholder="Ingrese nombre del Referido">
             </div>
             <div class="form-group my-3 txt">
                 <label for="Consultorio" class="form-label">Consultorio</label>
-                <input type="text" name="Consultorio" class="form-control">
+                <input type="text" name="Consultorio" class="form-control" placeholder="Ingrese el consultorio">
             </div><br>
         </form>
     </div>
@@ -79,17 +80,17 @@
         <form action="" class="form-client" >
             <div class="form-group txt">
                 <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" name="nombre" class="form-control">
+                <input type="text" name="nombre" class="form-control" placeholder="Ingrese los nombres del padre">
             </div>
                
             <div class="form-group my-3 txt">
                 <label for="apellido" class="form-label">Apellido</label>
-                <input type="text" name="apellido" class="form-control">
+                <input type="text" name="apellido" class="form-control" placeholder="Ingrese los apellidos del padre">
             </div>
 
             <div class="form-group my-3 txt">
                 <label for="telefono" class="form-label">Telefono</label>
-                <input type="text" name="telefono" class="form-control">
+                <input type="text" name="telefono" class="form-control" placeholder="Ingrese el telefono del padre">
             </div>
             <div class="form-group my-3 txt">
                 <label for="ocupacion" class="form-label my-3">Ocupacion</label><br>
@@ -102,11 +103,11 @@
             </div>
             <div class="form-group my-3 txt">
                 <label for="empresa" class="form-label">Empresa</label>
-                <input type="text" name="empresa" class="form-control">
+                <input type="text" name="empresa" class="form-control" placeholder="ingrese el domicilio de la empresa">
             </div>
             <div class="form-group my-3 txt">
                 <label for="domicilio_empresa" class="form-label">Domicilio de Empresa</label>
-                <input type="text" name="domicilio_empresa" class="form-control">
+                <input type="text" name="domicilio_empresa" class="form-control" placeholder="ingrese el nombre de la empresa">
             </div>
             
         </form>
@@ -114,16 +115,16 @@
         <form action="" class="form-client" >
             <div class="form-group txt">
                 <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" name="nombre" class="form-control">
+                <input type="text" name="nombre" class="form-control" placeholder="Ingrese los nombres de la madre">
             </div>
                
             <div class="form-group my-3 txt">
                 <label for="apellido" class="form-label">Apellido</label>
-                <input type="text" name="apellido" class="form-control">
+                <input type="text" name="apellido" class="form-control" placeholder="Ingrese los apellidos de la madre">
             </div>
             <div class="form-group my-3 txt">
                 <label for="telefono" class="form-label">Telefono</label>
-                <input type="text" name="telefono" class="form-control">
+                <input type="text" name="telefono" class="form-control" placeholder="Ingrese el telefono de la madre"> 
             </div>
             <div class="form-group my-3 txt">
                 <label for="ocupacion" class="form-label my-3">Ocupacion</label><br>
@@ -136,18 +137,23 @@
             </div>
             <div class="form-group my-3 txt">
                 <label for="empresa" class="form-label">Empresa</label>
-                <input type="text" name="empresa" class="form-control">
+                <input type="text" name="empresa" class="form-control" placeholder="ingrese el nombre de la empresa">
             </div>
             <div class="form-group my-3 txt">
                 <label for="domicilio_empresa" class="form-label">Domicilio de Empresa</label>
-                <input type="text" name="domicilio_empresa" class="form-control">
+                <input type="text" name="domicilio_empresa" class="form-control" placeholder="ingrese el domicilio de la empresa">
             </div>
         </form>
     </div>
   
     </div>
 </div>
-
+<div class="boton">
+    <form action="">
+        <button type="button" class="btn btn-primary btn-lg">Enviar Formulario</button>
+          
+    </form>
+</div>
 
 
 
