--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,6 +1,7 @@
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary gb-header">
     <div class="container-fluid" >
-      <img src="../../../assets/img/logo1.png" class="rounded mx-auto d-block img" alt="">
+      <img src="../../../assets/img/logo1.png " class="rounded mx-auto d-block img" alt="">
       <a class="navbar-brand" href="#">Dr. Franklin Porras</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav" fxLayout.lt-sm="column" fxLayout.lt-md="column"   fxLayout="row" >
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/']">Inicio</a>
+            <a class="nav-link" [routerLink]="['/home']">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['/user']">Pacientes</a>
