actualizacion del registro

--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -9,6 +9,9 @@
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav" fxLayout.lt-sm="column" fxLayout.lt-md="column"   fxLayout="row" >
           <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/detalle']">Detalle</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" [routerLink]="['/home']">Inicio</a>
           </li>
           <li class="nav-item">
