hice el menu modal

--- a/src/app/detalle/detalle.component.html
+++ b/src/app/detalle/detalle.component.html
@@ -1,1 +1,84 @@
-<p>detalle works!</p>
+<div class="container-fluid">
+    <div class="row modelo">
+        <div class="col-md-4 box">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-body clase-1">
+                    <p>Pagos</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4 box">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-body clase-2">
+                    <p>Admins</p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Save changes</button>
+                  </div>
+            </div>
+         </div>
+    </div>
+    <div class="col-md-4 box">
+        <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body clase-1"> 
+                <p class="txt">Registros</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" [routerLink]="['/register']"  >Save changes</button>
+              </div>
+        </div>
+     </div>
+</div>
+<div class="container-1">
+  <div class="row">
+    <div class="col-md-4 box">
+        <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body clase-2">
+                <p>Pagos</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+    </div>
+    <div class="col-md-4 box">
+      <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-body clase-1">
+              <p>Pagos</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+  </div>
+  <div class="col-md-4 box">
+    <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body clase-2">
+            <p>Pagos</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+</div>  
+</div>
+
