--- a/src/app/detalle/detalle.component.html
+++ b/src/app/detalle/detalle.component.html
@@ -4,7 +4,10 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-body clase-1">
-                    <p>Pagos</p>
+                    <div class="row">
+                      <img src="../../assets/img/cash-coin.svg" alt="" class="col"> 
+                      <p class="col">Pagos</p>
+                    </div>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -17,7 +20,11 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-body clase-2">
-                    <p>Admins</p>
+                    <div class="row">
+                      <img src="../../assets/img/people-fill.svg" alt="" class="col">
+                      <p class="col">Admins</p>
+                    </div>
+                    
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -30,7 +37,10 @@
         <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-body clase-1"> 
-                <p class="txt">Registros</p>
+                <div class="row">
+                  <img src="../../assets/img/folder-fill.svg" alt="" class="col">
+                  <p class="col">Registro</p>
+                </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -45,7 +55,10 @@
         <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-body clase-2">
-                <p>Pagos</p>
+                <div class="row">
+                  <img src="../../assets/img/person-square.svg" alt="" class="col">
+                  <p class="col">Pacientes</p>
+                </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
